// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AchievementList > renders 1`] = `
"<div data-v-1c120264="" class="achievement-list">
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Completionist</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="40 unique veggies" aria-label="40 unique veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐣</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="80 unique veggies" aria-label="80 unique veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="150 unique veggies" aria-label="150 unique veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🦅</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 veggies</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">Hot Streak</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="5 week streak of over 30 veggies" aria-label="5 week streak of over 30 veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌶️</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="10 week streak of over 30 veggies" aria-label="10 week streak of over 30 veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🔥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="20 week streak of over 30 veggies" aria-label="20 week streak of over 30 veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌋</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Experimenter</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="15 unique fruits and berries" aria-label="15 unique fruits and berries" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🍎</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="15 unique vegetables" aria-label="15 unique vegetables" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥦</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="15 unique leafy greens" aria-label="15 unique leafy greens" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥬</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Leafy Greens</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="15 unique roots and bulbs" aria-label="15 unique roots and bulbs" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥕</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Roots</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="15 unique beans and legumes" aria-label="15 unique beans and legumes" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🫛</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="15 unique grains, nuts and seeds" aria-label="15 unique grains, nuts and seeds" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌾</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`AchievementList > renders with badges enabled 1`] = `
"<div data-v-1c120264="" class="achievement-list">
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Completionist</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="40 unique veggies" aria-label="40 unique veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐣</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="80 unique veggies" aria-label="80 unique veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🐥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 veggies</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="150 unique veggies" aria-label="150 unique veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🦅</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 veggies</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">Hot Streak</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="5 week streak of over 30 veggies" aria-label="5 week streak of over 30 veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Bronze"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌶️</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="10 week streak of over 30 veggies" aria-label="10 week streak of over 30 veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Silver"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🔥</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="true" title="20 week streak of over 30 veggies" aria-label="20 week streak of over 30 veggies" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌋</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
      </div>
    </div>
  </div>
  <div data-v-1c120264="">
    <p data-v-1c120264="" class="achievement-list__label">The Experimenter</p>
    <div data-v-1c120264="" class="achievement-list__badge-container">
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="15 unique fruits and berries" aria-label="15 unique fruits and berries" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🍎</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="15 unique vegetables" aria-label="15 unique vegetables" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥦</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="15 unique leafy greens" aria-label="15 unique leafy greens" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥬</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Leafy Greens</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="15 unique roots and bulbs" aria-label="15 unique roots and bulbs" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🥕</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Roots</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="15 unique beans and legumes" aria-label="15 unique beans and legumes" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🫛</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
      </div>
      <div data-v-06381b3c="" data-v-1c120264="" aria-disabled="false" title="15 unique grains, nuts and seeds" aria-label="15 unique grains, nuts and seeds" class="badge" role="img">
        <div data-v-06381b3c="" class="badge__background badge__background--Gold"></div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__emoji">🌾</div>
        <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
      </div>
    </div>
  </div>
</div>"
`;
